2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Split EPC_PUBLISHER_SERVICE_NAME into EPC_SERVICE_NAME,
	EPC_SERVICE_NAME_HTTP and EPC_SERVICE_NAME_HTTPS.

	* libepc/publisher.h: Remove EPC_PUBLISHER_SERVICE_NAME.
	* libepc/service-names.h, docs/reference/libepc/libepc-docs.sgml,
	docs/reference/libepc/libepc-sections.txt: Introduce
	EPC_SERVICE_NAME, EPC_SERVICE_NAME_HTTP and EPC_SERVICE_NAME_HTTPS.
	* libepc/publisher.c: Use EPC_SERVICE_NAME_HTTP
	instead of EPC_PUBLISHER_SERVICE_NAME.
	* tests/test-consumer.c: Use EPC_SERVICE_NAME
	instead of EPC_PUBLISHER_SERVICE_NAME.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Change library name to libepc.

	* docs/reference/libepc/Makefile.am, libepc.pc.in,
	Makefile.am: Change library name to libepc.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Tell automake to install developer files.

	* Makefile.am: Install header files and pkg-config information.
	* configure.in, libepc.pc.in: Provide pkg-config information.
	* .gitignore: Ignore libepc.pc.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Add copyright headers.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Document EpcDispatcher and provide examples.

	* docs/reference/libepc/.gitignore: Remove libepc-sections.txt.
	* docs/reference/libepc/libepc-sections.txt: Add *Class
	structures as requested by the gtk-doc tool.
	* libepc/consumer.c, libepc/consumer.h, libepc/publisher.c,
	libepc/publisher.h: Add examples and document *Class structures.
	* libepc/dispatcher.c, libepc/dispatcher.h: Document EpcDispatcher.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Provide some initial API documentation.

	* docs/reference/libepc/Makefile.am: Force rebuilding
	of documentation when the code changes.
	* docs/reference/libepc/.gitignore: Ignore *.bak files.
	* libepc/consumer.c, libepc/consumer.h: Some initial documentation.
	* libepc/publisher.c, libepc/publisher.h: Some initial documentation.