@@ -1,5 +1,21 @@
+/* This program demonstrates and tests publishing of values.
+ *
+ * Usage: test-publisher [KEY=VALUE [KEY=VALUE...]]
+ *
+ * The arguments have the form "key=value". When a key is prefix with
+ * the string "file:" the file of the name passed as value is published.
+ *
+ * When no arguments are passed some default values are published,
+ * including the contents of this file by the key "source-code".
+ */
 #include "libepc/publisher.h"
 
+/* report_error:
+ * @strloc: the source-location
+ * @error: the error
+ *
+ * Reports a GError to the console. Pass %G_STRLOC for @strloc.
+ */
 static void
 report_error (const gchar  *strloc,
               GError      **error)
@@ -21,19 +37,30 @@ main (int   argc,
   EpcPublisher *publisher;
   GError *error = NULL;
 
+  /* Initialize the toolkit.
+   */
   g_thread_init (NULL);
   g_type_init ();
 
+  /* Create a new publisher.
+   */
   publisher = epc_publisher_new ("Easy Publisher Test", NULL, NULL);
 
   if (1 == argc)
     {
+      /* Publish some default values,
+       * when no arguments are passed on the command line.
+       */
       epc_publisher_add (publisher, "test", "value", -1);
       epc_publisher_add_file (publisher, "source-code", __FILE__, &error);
       report_error (G_STRLOC, &error);
     }
   else
     {
+      /* Publish the values passed on the command line. Each argument has the
+       * form "key=value". When a key is prefix with the string "file:" the
+       * file of the name passed as value is published.
+       */
       int i;
 
       for (i = 1; i < argc; ++i)
@@ -53,6 +80,8 @@ main (int   argc,
         }
     }
 
+  /* Actually run the publisher.
+   */
   epc_publisher_run (publisher);
   g_object_unref (publisher);
 
